versioned_docs/version-1.12.x/http-api/entry-api/write_data.mdx
---
title: Write Data
description: HTTP Endpoints for writing data to the database.
---

<head>
  <link
    rel="canonical"
    href="https://www.reduct.store/docs/http-api/entry-api/write_data"
  />
</head>

# Entry API to Write Data

The API provides several endpoints for writing data to the database. The endpoints allow writing a single record or a batch of records in a single request.

## Write a Record to an Entry

ReductStore creates an entry on the first write operation. The record
should be placed in the body of the HTTP request. The body can also be
empty.

The method needs a valid API token with write access to the entry's bucket
if authentication is enabled.

The endpoint can be used with the "Expect 100-continue" header. If the
header is not set and an error occurs on the database side, the database
drains the sent body and returns an HTTP status.

**Changes**:

- Version 1.3: the database supports labels. You can assign any number
  of labels to a record by using headers that start with
  `x-reduct-label-`.

import SwaggerComponent from "@site/src/components/SwaggerComponent";

<SwaggerComponent
  method="POST"
  path="/api/v1/b/:bucket_name/:entry_name"
  summary="Write a record to an entry"
  parameters={[
    {
      type: "path",
      details: {
        name: ":bucket_name",
        description: "Name of bucket",
        isRequired: true,
      },
    },
    {
      type: "path",
      details: {
        name: ":entry_name",
        description: "Name of entry",
        isRequired: true,
      },
    },
    {
      type: "query",
      details: {
        name: "ts",
        dataType: "Integer",
        description: "A UNIX timestamp in microseconds",
        isRequired: true,
      },
    },
    {
      type: "header",
      details: {
        name: "Content-Length",
        description:
          "Content-length is required to start an asynchronous write operation",
        isRequired: true,
      },
    },
    {
      type: "header",
      details: {
        name: "x-reduct-label-<name>",
        description: "A value of a label assigned to the record",
        isRequired: false,
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "The record is written",
    },
    {
      status: "400",
      message: "Bad Request",
      summary: "Posted content bigger or smaller than content-length",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is invalid or empty",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token does not have write permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Bucket is not found",
    },
    {
      status: "409",
      message: "Conflict",
      summary: "A record with the same timestamp already exists",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary: "Bad timestamp",
    },
  ]}
/>

## Write a Batch of Records

This method allows multiple records to be written in a single request. A
client should describe the records in headers in the format of [the Batch Protocol](/docs/http-api/entry-api/index.mdx#batch-protocol).

**Changes**:

- Version 1.7: the database supports labels. You can assign any number
  of labels to a record by using headers that start with `x-reduct-label-`.

<SwaggerComponent
    method="POST"
    path="/api/v1/b/:bucket_name/:entry_name/batch"
    summary="Write batch of records"
    responses={[
        {
            status: "200",
            message: "OK",
            summary:
                "The request was valid. However, some records may not be written. Check headers.",
        },
        {
            status: "400",
            message: "Bad Request",
            summary: "Posted content bigger or smaller than content-length",
        },
        {
            status: "401",
            message: "Unauthorized",
            summary: "Access token is invalid or empty",
        },
        {
            status: "403",
            message: "Forbidden",
            summary: "Access token does not have write permissions",
        },
        {
            status: "404",
            message: "Not Found",
            summary: "Bucket is not found",
        },
        {
            status: "422",
            message: "Unprocessable Entity",
            summary: "Bad timestamp or header format",
        },
    ]}

/>
